added map layer added div for a lat/lng coordinates

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<script src="https://npmcdn.com/react-leaflet-measure/dist/react-leaflet-measure.min.js"></script>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,8 +14,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>React App</title>
+
   </head>
   <body style="margin: 0px; overflow: hidden;">
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
