-переделал контекст под все состояния запросов(кроме daysInRange) -переделал mark_render.jsx весь. -переделал Card.jsx под все состояния кроме daysInRange.

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<script src="https://npmcdn.com/react-leaflet-measure/dist/react-leaflet-measure.min.js"></script>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,11 +8,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/earthTittle.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>F.A.M</title>
 
   </head>
   <body style="margin: 0px; overflow: hidden;">
